Settings are saved in between games

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -50,7 +50,7 @@ MultipleInstanceLastWidth=540
 LastExecutedLaunchDevice=WindowsNoEditor@JOSEPH-PC
 LastExecutedLaunchName=JOSEPH-PC
 LastExecutedPIEPreviewDevice=
-NewWindowPosition=(X=685,Y=28)
+NewWindowPosition=(X=685,Y=23)
 NewWindowWidth=540
 NewWindowHeight=960
 StandaloneWindowWidth=540
@@ -89,18 +89,18 @@ CurrentPosGridSize=8
 CurrentRotGridSize=6
 
 [MRU]
-MRUItem0=/Game/Levels/TylerLevel3
-MRUItem1=/Game/Levels/JoeLevel3
-MRUItem2=/Game/Levels/Level1
-MRUItem3=/Game/Levels/JoeLevel1
-MRUItem4=/Game/Levels/BaseLevel
-MRUItem5=/Game/Levels/Tutorial1
-MRUItem6=/Game/Levels/Tutorial2
-MRUItem7=/Game/Levels/Tutorial3
-MRUItem8=/Game/Levels/TylerLevel1
-MRUItem9=/Game/Levels/Level5
-MRUItem10=/Game/Levels/JoeLevel2
-MRUItem11=/Game/Levels/Level3
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/Tutorial1
+MRUItem2=/Game/Levels/TylerLevel3
+MRUItem3=/Game/Levels/JoeLevel3
+MRUItem4=/Game/Levels/Level1
+MRUItem5=/Game/Levels/JoeLevel1
+MRUItem6=/Game/Levels/BaseLevel
+MRUItem7=/Game/Levels/Tutorial2
+MRUItem8=/Game/Levels/Tutorial3
+MRUItem9=/Game/Levels/TylerLevel1
+MRUItem10=/Game/Levels/Level5
+MRUItem11=/Game/Levels/JoeLevel2
 
 [LevelSequenceEditor SequencerSettings]
 AutoChangeMode=None
@@ -167,13 +167,10 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/Bullet.Bullet
-OpenAssetsAtExit=/Game/Blueprints/SettingsInstance.SettingsInstance
+OpenAssetsAtExit=/Game/Blueprints/BounceSaveGame.BounceSaveGame
+OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
 OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
-OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
-OpenAssetsAtExit=/Game/Blueprints/Tiles/TileBlueprint.TileBlueprint
-OpenAssetsAtExit=/Game/Blueprints/Target.Target
-OpenAssetsAtExit=/Game/Blueprints/SaveGame.SaveGame
+OpenAssetsAtExit=/Game/Blueprints/SettingsInstance.SettingsInstance
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1812,6 +1809,7 @@ Throbber.Clipping=True
 Throbber.Performance=True
 Throbber.Render Transform=True
 Throbber.Navigation=True
+SettingsInstance_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -2015,10 +2013,10 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget=
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2057,7 +2055,7 @@ PaperSprite="\"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.Co
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-OptionsWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+OptionsWidget_C=
 LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TileBlueprint_C="\"Object.Default.Waypoints\" "
@@ -2807,7 +2805,7 @@ PrimType=3
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
