--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -167,7 +167,6 @@ LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorManager]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Blueprints/BounceSaveGame.BounceSaveGame
 OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
 OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
 OpenAssetsAtExit=/Game/Blueprints/SettingsInstance.SettingsInstance
@@ -1810,6 +1809,13 @@ Throbber.Performance=True
 Throbber.Render Transform=True
 Throbber.Navigation=True
 SettingsInstance_C.Default=True
+Tutorial1_C.Tick=True
+Tutorial1_C.Default=True
+Tutorial1_C.Replication=True
+Tutorial1_C.Input=True
+Tutorial1_C.Actor=True
+StrProperty.Variable=True
+StrProperty.DefaultValueCategory=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1991,6 +1997,8 @@ SettingsInstance_C.Default=True
 /Game/Materials/CannonMaterial.CannonMaterial=1
 /Game/Textures/CannonTexture2_Sprite.CannonTexture2_Sprite=1
 /Game/Particles/CannonLaserPointer.CannonLaserPointer=0
+/Game/Levels/Tutorial1.Tutorial1:PersistentLevel.Tutorial1=0
+/Game/Blueprints/SettingsInstance.SettingsInstance=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2805,7 +2813,7 @@ PrimType=3
 [DetailCustomWidgetExpansion]
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Texture Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Vector Parameter Values,
-PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens|Bloom,
+PostProcessVolume=PostProcessVolume.Lens.Lens,PostProcessVolume.Lens.Lens
 GeneralProjectSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
 GameplayTagsDeveloperSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.ActionMappings,PhysicsSettings.Physical Surface.PhysicalSurfaceList,IOSRuntimeSettings.Build.Remote Build Options,GameMapsSettings.DefaultModes.SelectedGameModeDetails,
