Made music loop

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1814,6 +1814,7 @@ Tutorial1_C.Input=True
 Tutorial1_C.Actor=True
 StrProperty.Variable=True
 StrProperty.DefaultValueCategory=True
+SoundWave.Curves=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1997,6 +1998,8 @@ StrProperty.DefaultValueCategory=True
 /Game/Particles/CannonLaserPointer.CannonLaserPointer=0
 /Game/Levels/Tutorial1.Tutorial1:PersistentLevel.Tutorial1=0
 /Game/Blueprints/SettingsInstance.SettingsInstance=0
+/Game/Sprites/CannonTexture2_Sprite.CannonTexture2_Sprite=1
+/Game/Audio/Laser_Groove.Laser_Groove=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2057,7 +2060,7 @@ MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PaperSprite="\"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" "
+PaperSprite="\"Object.Rendering.RenderGeometry\" \"Object.Rendering.RenderGeometry.Shapes\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0]\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0].Vertices\" \"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices\" "
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2879,6 +2882,7 @@ BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
+PaperSprite=PaperSprite.Collision.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
