--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -168,12 +168,12 @@ LastLevel=/Game/Levels/MainMenu
 [AssetEditorManager]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu
-OpenAssetsAtExit=/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/GameOverScreenWidget.GameOverScreenWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/HelpWidget.HelpWidget
+OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelSelectWidget.LevelSelectWidget
+OpenAssetsAtExit=/Game/Blueprints/BounceSaveGame.BounceSaveGame
+OpenAssetsAtExit=/Game/Blueprints/BounceGamemode.BounceGamemode
+OpenAssetsAtExit=/Game/Blueprints/Widgets/LevelButtonWidget.LevelButtonWidget
 OpenAssetsAtExit=/Game/Blueprints/Widgets/OptionsWidget.OptionsWidget
-OpenAssetsAtExit=/Game/Blueprints/Widgets/MainMenuWidget.MainMenuWidget
 
 [DetailCategories]
 PaperSpriteActor.TransformCommon=True
@@ -1821,6 +1821,7 @@ Tutorial1_C.Actor=True
 StrProperty.Variable=True
 StrProperty.DefaultValueCategory=True
 SoundWave.Curves=True
+BounceSaveGame_C.Default=True
 
 [AssetEditorToolkitTabLocation]
 /Game/2DSideScrollerBP/Blueprints/2DSideScrollerCharacter.2DSideScrollerCharacter=1
@@ -1953,7 +1954,7 @@ SoundWave.Curves=True
 /Game/Materials/TimerMaterial.TimerMaterial=0
 /Game/Materials/BreakableTileMaterial.BreakableTileMaterial=0
 /Game/Blueprints/Widgets/GameHUD.GameHUD=1
-/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget=1
+/Game/Blueprints/Widgets/BackgroundWidget.BackgroundWidget=0
 /Game/Materials/TimerMaterialTest.TimerMaterialTest=0
 /Game/Textures/TimerTexture.TimerTexture=1
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
@@ -2013,7 +2014,7 @@ MeshComponent="\"Object.Collision.BodyInstance\" "
 PrimitiveComponent="\"Object.Particles.InstanceParameters\" "
 SceneComponent="\"Object.Particles.InstanceParameters\" "
 ActorComponent="\"Object.Particles.InstanceParameters\" "
-Object=
+Object="\"Object.UnlockedLevels\" \"Object.UnlockedLevels\" "
 StaticMeshActor=
 2DSideScrollerCharacter_C=
 PaperCharacter=
@@ -2059,13 +2060,13 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
-LevelButtonWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+LevelButtonWidget_C=
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 PaperSprite="\"Object.Rendering.RenderGeometry\" \"Object.Rendering.RenderGeometry.Shapes\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0]\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0].Vertices\" \"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices\" "
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
@@ -2077,8 +2078,8 @@ TileBlueprint_C="\"Object.Default.Waypoints\" "
 Bullet_C=
 ProgressBar="\"Object.Render Transform.RenderTransform\" "
 TimerWidget_C="\"Object.Render Transform.RenderTransform\" "
-GameModeBase=
-Info=
+GameModeBase="\"Object.Levels\" \"Object.Levels\" "
+Info="\"Object.Levels\" \"Object.Levels\" "
 HUDWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 GeometryCacheComponent="\"Object.Collision.BodyInstance\" "
 NewTarget_C=
@@ -2117,7 +2118,7 @@ CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscil
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleTrailBase="\"Object.Source.SourceStrength.Distribution\" "
 ParticleModuleSpawnPerUnit="\"Object.Spawn.SpawnPerUnit\" \"Object.Spawn.SpawnPerUnit.Distribution\" "
-BounceGamemode_C=
+BounceGamemode_C="\"Object.Levels\" \"Object.Levels\" "
 TileDoubleWall_C="\"Object.Default.Waypoints\" "
 TileEnd_C="\"Object.Default.Waypoints\" "
 TileWall_C="\"Object.Default.Waypoints\" "
@@ -2156,6 +2157,8 @@ Border="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Slider="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.DisabledBarImage\" \"Object.Style.WidgetStyle.DisabledBarImage.TintColor\" \"Object.Style.WidgetStyle.NormalThumbImage.TintColor\" \"Object.Style.WidgetStyle.DisabledThumbImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 Throbber="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+BounceSaveGame_C="\"Object.UnlockedLevels\" \"Object.UnlockedLevels\" "
+SaveGame="\"Object.UnlockedLevels\" \"Object.UnlockedLevels\" "
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Tiles/TileWall.TileWall;
@@ -2195,7 +2198,7 @@ Texture2D.LevelOfDetail=False
 PreviewMaterial.Material=True
 
 [MessageLog]
-LastLogListing=LoadErrors
+LastLogListing=PIE
 
 [RootWindow]
 ScreenPosition=X=427.000 Y=139.000
@@ -2877,18 +2880,19 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindin
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-IntProperty=ArrayProperty.DefaultValueCategory.None,
+IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=
+ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
 PaperSprite=PaperSprite.Collision.None,
+BounceSaveGame_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
