Added button to clear save progress

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2029,10 +2029,10 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+Widget="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
+Visual="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+UserWidget="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2060,18 +2060,18 @@ LevelSequenceEditorSettings="\"Object.Tracks.TrackSettings\" \"Object.Tracks.Tra
 PaperSpriteComponent="\"Object.Collision.BodyInstance\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 CanvasPanel="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 Cannon_C=
 LevelButtonWidget_C=
 MultiLineEditableTextBox="\"Object.Render Transform.RenderTransform\" "
 EditableTextBox="\"Object.Render Transform.RenderTransform\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.Margin\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.Margin\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.BackgroundColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 PaperSprite="\"Object.Rendering.RenderGeometry\" \"Object.Rendering.RenderGeometry.Shapes\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0]\" \"Object.Rendering.RenderGeometry.Shapes.Shapes[0].Vertices\" \"Object.Collision.CollisionGeometry\" \"Object.Collision.CollisionGeometry.Shapes\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0]\" \"Object.Collision.CollisionGeometry.Shapes.Shapes[0].Vertices\" "
 BackgroundWidget_C=
 WidgetSwitcher="\"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 MainMenuWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-OptionsWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+OptionsWidget_C="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
 LevelSelectWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 HelpWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 TileBlueprint_C="\"Object.Default.Waypoints\" "
@@ -2112,7 +2112,7 @@ ParticleModuleVelocityCone="\"Object.Cone.Angle\" \"Object.Cone.Angle.Distributi
 GameOverScreenWidget_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 ParticleModuleRequired="\"Object.Emitter.EmitterRotation\" "
 ParticleModuleAccelerationOverLifetime="\"Object.Acceleration.AccelOverLife\" \"Object.Acceleration.AccelOverLife.Distribution\" "
-CheckBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+CheckBox="\"Object.Style.WidgetStyle\" \"Object.Style.WidgetStyle.CheckedImage\" \"Object.Style.WidgetStyle.CheckedImage.TintColor\" \"Object.Style.WidgetStyle.CheckedHoveredImage.TintColor\" \"Object.Style.WidgetStyle.CheckedPressedImage\" \"Object.Style.WidgetStyle.CheckedPressedImage.TintColor\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 TargetCameraShake_C="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
 CameraShake="\"Object.Oscillation.RotOscillation\" \"Object.Oscillation.RotOscillation.Pitch\" \"Object.Oscillation.RotOscillation.Yaw\" \"Object.Oscillation.RotOscillation.Roll\" "
 ParticleModuleTrailSource="\"Object.Source.SourceStrength.Distribution\" "
@@ -2884,15 +2884,16 @@ K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.De
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableSet=
+K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+ObjectProperty=
 BoolProperty=
 NewTarget_C=
 BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
 PaperSprite=PaperSprite.Collision.None,
-BounceSaveGame_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+BounceSaveGame_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
+OptionsWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 
 [MaterialInstanceEditor]
 LightDir=P=-39.999985 Y=27.499968 R=0.000000
