Fixed levels not unlocking

--- a/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Development/Unreal Project/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -2007,6 +2007,7 @@ BounceSaveGame_C.Default=True
 /Game/Blueprints/SettingsInstance.SettingsInstance=0
 /Game/Sprites/CannonTexture2_Sprite.CannonTexture2_Sprite=1
 /Game/Audio/Laser_Groove.Laser_Groove=0
+/Game/Blueprints/Widgets/PauseWidget.PauseWidget=0
 
 [DetailPropertyExpansion]
 StaticMeshComponent="\"Object.Collision.BodyInstance\" "
@@ -2029,10 +2030,10 @@ LevelEditorViewportSettings="\"Object.GridSnapping.DecimalGridSizes\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" \"Object.Appearance.Font.OutlineSettings\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
-Visual="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Render Transform.RenderTransform\" "
 HUD_C="\"Object.Appearance.ColorAndOpacity\" \"Object.Render Transform.RenderTransform\" "
-UserWidget="\"Object.DefaultUnlocked\" \"Object.DefaultUnlocked\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 PaperTileSet="\"Object.TileSet.AdditionalSourceTextures\" \"Object.Sprite.PerTileData.PerTileData[0]\" \"Object.Sprite.PerTileData.PerTileData[1]\" \"Object.Sprite.PerTileData.PerTileData[2]\" \"Object.Sprite.PerTileData.PerTileData[3]\" \"Object.Sprite.PerTileData.PerTileData[4]\" \"Object.Sprite.PerTileData.PerTileData[5]\" \"Object.Sprite.PerTileData.PerTileData[6]\" \"Object.Sprite.PerTileData.PerTileData[7]\" \"Object.Sprite.PerTileData.PerTileData[8]\" \"Object.Sprite.PerTileData.PerTileData[9]\" \"Object.Sprite.PerTileData.PerTileData[10]\" \"Object.Sprite.PerTileData.PerTileData[11]\" \"Object.Sprite.PerTileData.PerTileData[12]\" \"Object.Sprite.PerTileData.PerTileData[13]\" \"Object.Sprite.PerTileData.PerTileData[14]\" \"Object.Sprite.PerTileData.PerTileData[15]\" \"Object.Sprite.PerTileData.PerTileData[16]\" \"Object.Sprite.PerTileData.PerTileData[17]\" \"Object.Sprite.PerTileData.PerTileData[20]\" \"Object.Sprite.PerTileData.PerTileData[21]\" \"Object.Sprite.PerTileData.PerTileData[22]\" \"Object.Sprite.PerTileData.PerTileData[23]\" \"Object.Sprite.PerTileData.PerTileData[24]\" "
 MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[0].Object.ParameterValue\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2880,16 +2881,16 @@ WmfMediaSettings=InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindin
 SphereComponent=SphereComponent.Physics.ConstraintsGroup,
 ArrayProperty=ArrayProperty.DefaultValueCategory.None,
 Cannon_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
-K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
+K2Node_VariableGet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 FloatProperty=
 LevelButtonWidget_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 IntProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_VariableSet=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
 TileBlueprint_C=ArrayProperty.DefaultValueCategory.None,IntProperty.DefaultValueCategory.None,
-ObjectProperty=
+ObjectProperty=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 BoolProperty=
 NewTarget_C=
-BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,
+BounceGamemode_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 ParticleModuleColor=ParticleModuleColor.Color.Distribution,ParticleModuleColor.Color.Constant,
 PaperSprite=PaperSprite.Collision.None,
 BounceSaveGame_C=ArrayProperty.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,K2Node_VariableSet.DefaultValueCategory.None,
